<resources>
    <string name="ServiceDescription">MyBackgroundService</string>

    <string name="app_name">BactiBeater</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="exit">Exit</string>
    <string name="daily_overview">Daily Overview</string>
    <string name="current_date">Current Date:</string>
    <string name="choose_specific_location">Choose Specific Location</string>
    <string name="go_back">Go Back</string>
    <string name="green_hotspot">Green Hotspot:</string>
    <string name="red_hotspot">Red Hotspot:</string>
    <string name="search_for_location">Search for location</string>
    <string name="data_on_sanitizing_at">Data For Sanitizing At:</string>
    <string name="department_xx">Department XXXXXXXXX</string>
    <string name="show_data_in_percent">Show Data In %</string>
    <string name="show_data_in_hours">Show Data In Hours</string>
    <string name="please_fill_in_both_textviews">Please fill in both username and password and try again!</string>
    <string name="message_box_title">Please try again</string>
    <string name="please_fill_in_right_information">Please fill in correct username and correct password and try again!</string>
    <string name="date">Date</string>
    <string name="procentage">Procentage</string>
    <string name="number_of_visitors">Visitors</string>
    <string name="visitors_sanitized">Sanitations</string>
    <string name="seven_days_overview_navigation">See 7 days overview</string>
    <string name="last_seven_days_overview">Overview for the last seven days</string>
    <string name="data_average_behaviour_last_seven_days">Average location changes and sanitations for one person</string>
    <string name="data_summed_behaviour_last_seven_days">Sum of location changes and sanitations</string>
    <string name="data_summed_sanitations_last_seven_days">Sum of sanitations at location changes and ...</string>
</resources>
