<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpecificLocationActivity">

    <TextView
        android:id="@+id/dataOnSanitizingAtTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:includeFontPadding="false"
        android:text="@string/data_on_sanitizing_at"
        android:textColor="#00796B"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/specificSanitizeDataRV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229" />

    <TextView
        android:id="@+id/specificLocationTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:includeFontPadding="false"
        android:text="@string/department_xx"
        android:textColor="#3E0B0A0A"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/specificSanitizeDataRV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataOnSanitizingAtTV"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/goBackB"
        android:layout_width="85dp"
        android:layout_height="38dp"
        android:layout_marginBottom="36dp"
        android:background="#80CBC4"
        android:shadowColor="#B2DFDB"
        android:text="@string/go_back"
        android:textAllCaps="false"
        android:textColor="#00796B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/exitB"
        android:layout_width="85dp"
        android:layout_height="38dp"
        android:layout_marginBottom="36dp"
        android:background="#80CBC4"
        android:shadowColor="#B2DFDB"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:textColor="#00796B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/specificSanitizeDataRV"
        android:layout_width="375dp"
        android:layout_height="429dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.569" />

    <TextView
        android:id="@+id/dateHeaderTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginBottom="16dp"
        android:text="@string/date"
        app:layout_constraintBottom_toTopOf="@+id/specificSanitizeDataRV"
        app:layout_constraintEnd_toStartOf="@+id/procentageHeaderTV"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/procentageHeaderTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginBottom="16dp"
        android:text="@string/procentage"
        app:layout_constraintBottom_toTopOf="@+id/specificSanitizeDataRV"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/specificSanitizeDataRV" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="16dp"
        android:text="@string/number_of_visitors"
        app:layout_constraintBottom_toTopOf="@+id/specificSanitizeDataRV"
        app:layout_constraintEnd_toStartOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:text="@string/visitors_sanitized"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>